--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "api_gc_esportes",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "server.ts",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "@prisma/client": "3.8.1",
+    "@prisma/client": "5.3.1",
     "express": "^4.17.2",
+    "prisma": "^5.3.1"
   },
   "devDependencies": {
-    "prisma": "^3.8.1",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
+    "typescript": "^5.2.2"
   }
 }
