--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
+    "vercel-build": "yaen prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "5.3.1",
