--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/gcesportes?schema=public"
+
+API_AUTH_DEBUG=FALSE
+
+JWT_SECRET_TOKEN="TOKEN_HERE"
