--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@prisma/client": "5.3.1",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^5.2.2"
   }
