--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.3.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.3",
     "ts-node-dev": "^1.1.8",
