--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/gcesportes?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/gcesportes?schema=public&pgbouncer=true"
+DIRECT_URL="postgresql://postgres:postgres@localhost:5432/gcesportes?schema=public"
 
 API_AUTH_DEBUG=FALSE
 
